<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/img"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="10dp">

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_launcher_background" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/itemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@id/img"
        android:text="@string/name"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/itemEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/itemName"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@id/img"
        android:text="@string/email1"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/item_email_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/itemName"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/itemEmail"
        android:text="@string/zero"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/item_id1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/itemEmail"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@id/img"
        android:text="@string/id"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/item_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/itemEmail"
        android:layout_marginStart="5dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@id/item_id1"
        android:text="@string/zero"
        android:textSize="15sp" />

</RelativeLayout>