<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/splashLogo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="180dp"
        android:layout_marginTop="81dp"
        android:layout_marginEnd="181dp"
        android:layout_marginBottom="600dp"
        android:src="@drawable/baseline_class_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="300dp"
        android:layout_height="67dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="521dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="142dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nim"
        android:layout_width="300dp"
        android:layout_height="67dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="436dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="228dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/nim"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/gitname"
        android:layout_width="300dp"
        android:layout_height="67dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="351dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="313dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/gitname"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="300dp"
        android:layout_height="67dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="177dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="487dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/username"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/pwText"
        android:layout_width="300dp"
        android:layout_height="67dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="266dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="398dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/regBtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="616dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="67dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAllCaps="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>